Nav Styles Added

--- a/index.html
+++ b/index.html
@@ -3,9 +3,22 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Poppins"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css" />
     <title>Navigation</title>
   </head>
   <body>
-    <div class="logo"><h4>The Navigation</h4></div>
+    <nav>
+      <div class="logo"><h4>The Navigation</h4></div>
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Work</a></li>
+        <li><a href="#">Project</a></li>
+      </ul>
+    </nav>
   </body>
 </html>
