--- a/index.html
+++ b/index.html
@@ -13,12 +13,17 @@
   <body>
     <nav>
       <div class="logo"><h4>The Navigation</h4></div>
-      <ul>
+      <ul class="nav-links">
         <li><a href="#">Home</a></li>
         <li><a href="#">About</a></li>
         <li><a href="#">Work</a></li>
         <li><a href="#">Project</a></li>
       </ul>
+      <div class="burger">
+        <div class="line1"></div>
+        <div class="line2"></div>
+        <div class="line3"></div>
+      </div>
     </nav>
   </body>
 </html>
